--- a/Seva.Assessment.WebApi/Seva.Assessment.FluentNHibernetImpl.Tests/Seva.Assessment.FluentNHibernetImpl.Tests.csproj
+++ b/Seva.Assessment.WebApi/Seva.Assessment.FluentNHibernetImpl.Tests/Seva.Assessment.FluentNHibernetImpl.Tests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.6.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.5.1" />
     <PackageReference Include="xunit" Version="2.3.1" />
@@ -16,6 +17,18 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Seva.Assessment.FluentNHibernetImpl\Seva.Assessment.FluentNHibernetImpl.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Microsoft.Extensions.Configuration">
+      <HintPath>..\..\..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.extensions.configuration\2.0.1\lib\netstandard2.0\Microsoft.Extensions.Configuration.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
